tests/fixtures/invalid/bool_bitand_none.py
# Cannot bitwise AND Bool and None
x: bool = True & None
